fix: recipes 2