@@ -1,19 +1,19 @@
 package cn.nukkit.inventory.request;
 
+import cn.nukkit.Player;
+import cn.nukkit.network.protocol.types.itemstack.ContainerSlotType;
+import cn.nukkit.network.protocol.types.itemstack.request.action.DestroyAction;
+import cn.nukkit.network.protocol.types.itemstack.request.action.ItemStackRequestActionType;
+import cn.nukkit.network.protocol.types.itemstack.response.ItemStackResponse;
+import cn.nukkit.network.protocol.types.itemstack.response.ItemStackResponseContainer;
+import cn.nukkit.network.protocol.types.itemstack.response.ItemStackResponseSlot;
 import lombok.extern.slf4j.Slf4j;
-import org.allaymc.api.entity.interfaces.EntityPlayer;
-import org.cloudburstmc.protocol.bedrock.data.GameType;
-import org.cloudburstmc.protocol.bedrock.data.inventory.itemstack.request.action.DestroyAction;
-import org.cloudburstmc.protocol.bedrock.data.inventory.itemstack.request.action.ItemStackRequestAction;
-import org.cloudburstmc.protocol.bedrock.data.inventory.itemstack.request.action.ItemStackRequestActionType;
-import org.cloudburstmc.protocol.bedrock.data.inventory.itemstack.response.ItemStackResponseContainer;
-import org.cloudburstmc.protocol.bedrock.data.inventory.itemstack.response.ItemStackResponseSlot;
 
 import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
-import static org.allaymc.api.container.Container.EMPTY_SLOT_PLACE_HOLDER;
-import static org.allaymc.api.item.interfaces.ItemAirStack.AIR_TYPE;
+import static cn.nukkit.inventory.request.CraftResultDeprecatedActionProcessor.NO_RESPONSE_DESTROY_KEY;
+
 
 /**
  * Allay Project 2023/7/28
@@ -21,58 +21,59 @@ import static org.allaymc.api.item.interfaces.ItemAirStack.AIR_TYPE;
  * @author daoge_cmd
  */
 @Slf4j
-public class DestroyActionProcessor implements ContainerActionProcessor<DestroyAction> {
+public class DestroyActionProcessor implements ItemStackRequestActionProcessor<DestroyAction> {
     @Override
     public ItemStackRequestActionType getType() {
         return ItemStackRequestActionType.DESTROY;
     }
 
     @Override
-    public ActionResponse handle(DestroyAction action, EntityPlayer player, int currentActionIndex, ItemStackRequestAction[] actions, Map<Object, Object> dataPool) {
-        if (player.getGameType() != GameType.CREATIVE) {
+    public ItemStackResponse handle(DestroyAction action, Player player, ItemStackRequestContext context) {
+        Boolean noResponseForDestroyAction = context.get(NO_RESPONSE_DESTROY_KEY);
+        if (noResponseForDestroyAction != null && noResponseForDestroyAction) {
+            return null;
+        }
+        if (player.getGamemode() != 1) {
             log.warn("only creative mode can destroy item");
-            return error();
+            return context.error();
         }
-        var container = player.getContainerBySlotType(action.getSource().getContainer());
+        ContainerSlotType container = action.getSource().getContainer();
+        var sourceInventory = NetworkMapping.getInventory(player, container);
         var count = action.getCount();
-        var slot = container.fromNetworkSlotIndex(action.getSource().getSlot());
-        var item = container.getItemStack(slot);
-        if (failToValidateStackNetworkId(item.getStackNetworkId(), action.getSource().getStackNetworkId())) {
+        var slot = sourceInventory.fromNetworkSlot(action.getSource().getSlot());
+        var item = sourceInventory.getItem(slot);
+        if (failToValidateStackNetworkId(item.getNetId(), action.getSource().getStackNetworkId())) {
             log.warn("mismatch stack network id!");
-            return error();
+            return context.error();
         }
-        if (item.getItemType() == AIR_TYPE) {
+        if (item.isNull()) {
             log.warn("cannot destroy an air!");
-            return error();
+            return context.error();
         }
         if (item.getCount() < count) {
             log.warn("cannot destroy more items than the current amount!");
-            return error();
+            return context.error();
         }
         if (item.getCount() > count) {
             item.setCount(item.getCount() - count);
-            container.onSlotChange(slot);
+            sourceInventory.setItem(slot, item);
         } else {
-            item = EMPTY_SLOT_PLACE_HOLDER;
-            container.setItemStack(slot, item);
+            sourceInventory.clear(slot);
         }
-        return new ActionResponse(
-                true,
-                Collections.singletonList(
-                        new ItemStackResponseContainer(
-                                container.getSlotType(slot),
-                                Collections.singletonList(
-                                        new ItemStackResponseSlot(
-                                                container.toNetworkSlotIndex(slot),
-                                                container.toNetworkSlotIndex(slot),
-                                                item.getCount(),
-                                                item.getStackNetworkId(),
-                                                item.getCustomName(),
-                                                item.getDurability()
-                                        )
+        return context.success(List.of(
+                new ItemStackResponseContainer(
+                        sourceInventory.getSlotType(slot),
+                        Collections.singletonList(
+                                new ItemStackResponseSlot(
+                                        sourceInventory.toNetworkSlot(slot),
+                                        sourceInventory.toNetworkSlot(slot),
+                                        item.getCount(),
+                                        item.getNetId(),
+                                        item.getCustomName(),
+                                        item.getDamage()
                                 )
                         )
                 )
-        );
+        ));
     }
 }
